fix send button and baseurl

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <p>Welcome to the Evil Communicator-inator chatroom!</p>
         <textarea id="messages" readonly></textarea>
         <input type="text" id="message-input" placeholder="Type your message here..." />
-        <button id="send-button">Send</button>
+        <button onclick="sendMessage()" id="send-button">Send</button>
      </div>
+</div>
+
 </body>
     <script src="js/index.js"></script>
 </html>
