logging in and signing up adjusted to use base url

--- a/html/success.html
+++ b/html/success.html
@@ -14,7 +14,9 @@
     </div>
 </head>
 <body>
+    <div class="successpage">
     <h1>Success!</h1>
     <p>You're one step closer to conquering the Tri-State Area!</p>
+    </div>
 </body>
 </html>
