--- a/html/login.html
+++ b/html/login.html
@@ -14,6 +14,8 @@
     </div>
 </head>
 <body>
+<script src="../js/check.js"></script>
+    <script src="../js/login.js"></script>
     <div class="signup-container">
     <h2>Account Log-inator!</h2>
     <form action="/submit-login" method="POST">
@@ -26,7 +28,6 @@
         <button type="submit">Login</button>
     </form>
     </div>
-    <script src="../js/login.js"></script>
 </body>
 <div class="footer">
     <p>&copy; 2025 Doofenshmirtz Evil Inc. All rights reserved.</p>
