--- a/html/profile.html
+++ b/html/profile.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="titleUsername">[Username] - Doofenshmirtz Evil Inc.</title>
     <link rel="stylesheet" href="../css/main.css">
-    <script src="../js/profile.js"></script>
     <div class="navbar">
         <a href="../index.html">Home</a>
         <a href="signup.html">Sign-up</a>
@@ -21,6 +20,8 @@
         <p id="bio">Bio:</p>
         <input type="text" id="bio-input" placeholder="Update bio here...">
         <button id="edit-button" type="button">Edit Profile</button>
+        <script src="../js/profile.js"></script>
+        <script src="/check.js"></script>
     </div>
 </body>
 <div class="footer">
