--- a/html/signup.html
+++ b/html/signup.html
@@ -26,6 +26,7 @@
         <button type="submit">Sign Up</button>
     </form>
     </div>
+    <script src="../js/check.js"></script>
     <script src="../js/sign-up.js"></script>
 </body>
 <div class="footer">
