profile and aesthetic changes

--- a/html/profile.html
+++ b/html/profile.html
@@ -13,15 +13,17 @@
     </div>
     </head>
 <body>
+    <script src="../js/check.js"></script>
     <div class="profile-container">
+        <div class="profile-header">
         <img src="../assets/profile-pic.png" alt="Profile Picture" class="profile-pic">
+        </div>
         <h2>Profile</h2>
         <p id="username">Username:</p>
         <p id="bio">Bio:</p>
         <input type="text" id="bio-input" placeholder="Update bio here...">
         <button id="edit-button" type="button">Edit Profile</button>
         <script src="../js/profile.js"></script>
-        <script src="/check.js"></script>
     </div>
 </body>
 <div class="footer">
