--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         <p>Welcome to the Evil Communicator-inator chatroom!</p>
         <textarea id="messages" readonly></textarea>
         <input type="text" id="message-input" placeholder="Type your message here..." />
-        <button onclick="sendMessage()" id="send-button">Send</button>
+        <button id="send-button">Send</button>
      </div>
 </div>
 
 </body>
+    <script src="js/check.js"></script>
     <script src="js/index.js"></script>
 </html>
