final touches on profile including fixed code for bio editing

--- a/html/profile.html
+++ b/html/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="titleUsername">[Username] - Doofenshmirtz Evil Inc.</title>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/profile.css">
     <div class="navbar">
         <a href="../index.html">Home</a>
         <a href="signup.html">Sign-up</a>
@@ -23,6 +24,7 @@
         <p id="bio">Bio:</p>
         <input type="text" id="bio-input" placeholder="Update bio here...">
         <button id="edit-button" type="button">Edit Profile</button>
+        <script src="../js/check.js"></script>
         <script src="../js/profile.js"></script>
     </div>
 </body>
